@@ -1,6 +1,5 @@
 TODO
 ====
-2. Add image of app to doc.
 3. Translate app to defined language texts.
 4. Add full plack app to doc (See Plack::App::Login::Request doc).
 5.
@@ -9,3 +8,6 @@ Applied
 =======
 1. Rewrite to Plack::App::Tags::HTML
 OK [20230529] skim
+
+2. Add image of app to doc.
+OK [20240510] skim
