@@ -1,4 +1,5 @@
 0.05
+ - Add image for example in doc.
  - Fix of label for username.
 
 0.04 2024-05-09T13:07:06+02:00
